--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,7 @@ main{
     line-height: 45px;
     font-weight: bold;
     color: var(--light-grayish-blue);
+    margin-bottom: 0 !important;
 }
 .footer img{
     cursor: pointer;
